# mxc

./: .gitignore  CMakeLists.txt  Makefile  README.md  basis.c  basis.cpp  basis.cxx  basis.hpp  basis.hxx  bodies.cxx  bodies.hxx  build_tree.c  build_tree.cpp  build_tree.cxx  build_tree.hpp  build_tree.hxx  comm-mpi.cpp  comm-mpi.hpp  comm-nccl.cu  comm-nccl.hpp  comm.cpp  comm.hpp  csr_matrix.cpp  csr_matrix.cu  csr_matrix.hpp  data_container.hpp  device_csr_matrix.cu  device_csr_matrix.cuh  device_factorize.cu  device_factorize.cuh  device_gmres.cu  device_manage.cu  device_matrix_desc.cu  device_precondition.cu  device_substitution.cu  dist.cxx  dist.hxx  domain.cxx  domain.hxx  factorize.cu  (+59 more)
.devcontainer/: Dockerfile  devcontainer.json
experiments/: backward_error.cpp  convergence_test.cpp  find_ranks.cpp  find_ranks2.cpp  gpu_timing.cpp  initial_ir_test.cpp  ma_mod.cpp  main.cpp  mas_method_test.cpp  scaling_test.cpp
scripts/: Dockerfile  plot_gmres.py
